compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_private_alias_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n            import gleam/wibble.{one} as wobble\n            // Since the import is only used for unused private variables\n            // It is also considered unused\n            const one = one\n        "
---
warning: Unused imported value
  ┌─ /src/warning/wrn.gleam:1:1
  │  
1 │ ╭ 
2 │ │             import gleam/wibble.{one} as wobble
  │ ╰────────────^ This imported value is never used

Hint: You can safely remove it.

warning: Unused imported module alias
  ┌─ /src/warning/wrn.gleam:2:39
  │
2 │             import gleam/wibble.{one} as wobble
  │                                       ^^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import gleam/wibble as _


warning: Unused private constant
  ┌─ /src/warning/wrn.gleam:5:13
  │
5 │             const one = one
  │             ^^^^^^^^^ This private constant is never used

Hint: You can safely remove it.
