compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_private_const_warnings_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: const a = 1
---
----- SOURCE CODE
const a = 1

----- WARNING
warning: Unused private constant
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ const a = 1
  │ ^^^^^^^ This private constant is never used

Hint: You can safely remove it.
