compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_private_type_warnings_test3.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: type X = Int
---
warning: Unused private type
  ┌─ /src/warning/wrn.gleam:1:1
  │
1 │ type X = Int
  │ ^^^^^^^^^^^^ This private type is never used

Hint: You can safely remove it.
