compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_public_alias_warning_test.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\n            import gleam/wibble.{one} as wobble\n            pub const one = one\n        "
---
warning: Unused imported module alias
  ┌─ /src/warning/wrn.gleam:2:39
  │
2 │             import gleam/wibble.{one} as wobble
  │                                       ^^^^^^^^^ This alias is never used

Hint: You can safely remove it.

    import gleam/wibble as _
