compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_record_access_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Thing {\n  Thing(value: Int)\n}\n\npub fn main() {\n  let thing = Thing(1)\n  thing.value\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.gleam:8:8
  │
8 │   thing.value
  │        ^^^^^^ This value is never used

Hint: You can safely remove it.
