compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__warnings__unused_record_constructor_raises_a_warning.snap
---
source: compiler-core/src/type_/tests/warnings.rs
expression: "\npub type Thing {\n  Thing(value: Int)\n}\n\npub fn main() {\n  Thing(1)\n  1\n}\n"
---
warning: Unused value
  ┌─ /src/warning/wrn.gleam:7:3
  │
7 │   Thing(1)
  │   ^^^^^^^^ This value is never used

Hint: You can safely remove it.
